--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "chart.js": "^4.4.7",
     "core-js": "^3.8.3",
+    "dayjs": "^1.11.13",
+    "jwt-decode": "^4.0.0",
     "swiper": "^11.1.14",
     "vue": "^3.2.13",
+    "vue-chartjs": "^5.3.2",
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
